warehouse/force-app/main/default/objects/Products__x/fields/BrandName__c.field-meta.xml
<CustomField>
    <fullName>BrandName__c</fullName>
    <description>BrandName</description>
    <externalDeveloperName>BrandName</externalDeveloperName>
    <label>Brand Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>