warehouse/force-app/main/default/objects/Products__x/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category</description>
    <externalDeveloperName>Category</externalDeveloperName>
    <label>Category</label>
    <length>128</length>
    <referenceTo>ProductCategories__x</referenceTo>
    <relationshipLabel>ProductCategories</relationshipLabel>
    <relationshipName>ProductCategories</relationshipName>
    <type>ExternalLookup</type>
</CustomField>