warehouse/force-app/main/default/objects/Products__x/fields/CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>CreatedOn__c</fullName>
    <description>CreatedOn</description>
    <externalDeveloperName>CreatedOn</externalDeveloperName>
    <label>CreatedOn</label>
    <type>DateTime</type>
</CustomField>