warehouse/force-app/main/default/objects/Products__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>