warehouse/force-app/main/default/objects/Products__x/fields/OrderLimit__c.field-meta.xml
<CustomField>
    <fullName>OrderLimit__c</fullName>
    <description>OrderLimit</description>
    <externalDeveloperName>OrderLimit</externalDeveloperName>
    <label>OrderLimit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>