warehouse/force-app/main/default/objects/Products__x/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>ProductId</description>
    <externalDeveloperName>ProductId</externalDeveloperName>
    <label>ProductId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>