warehouse/force-app/main/default/objects/Products__x/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <description>Stock</description>
    <externalDeveloperName>Stock</externalDeveloperName>
    <label>Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>