warehouse/force-app/main/default/objects/Products__x/fields/UpdatedOn__c.field-meta.xml
<CustomField>
    <fullName>UpdatedOn__c</fullName>
    <description>UpdatedOn</description>
    <externalDeveloperName>UpdatedOn</externalDeveloperName>
    <label>UpdatedOn</label>
    <type>DateTime</type>
</CustomField>