warehouse/force-app/main/default/objects/Products__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Id</columns>
    <columns>CreatedOn__c</columns>
    <columns>Name__c</columns>
    <columns>BrandName__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>OrderLimit__c</columns>
    <columns>ProductId__c</columns>
    <columns>Stock__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>UpdatedOn__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>